fix: optimize ViewCVButton for mobile with anchor tag and z-index fix

--- a/src/components/About/ViewCVButton/ViewCVButton.scss
+++ b/src/components/About/ViewCVButton/ViewCVButton.scss
@@ -1,15 +1,21 @@
 @import '../../../color.scss';
 
-.view-cv-button{
+.view-cv-button {
 
-	&__container{
+	&__container {
 		margin-top: 15px;
 		align-self: end;
 		display: flex;
 		position: relative;
+		z-index: 10;
 		width: 116px;
 		height: 50px;
 		margin-bottom: 35px;
+		cursor: pointer;
+
+		&:active {
+			scale: 0.95;
+		}
 	}
 
 	&__btn {
@@ -27,6 +33,6 @@
 
 	&__background {
 		background-color: black;
-		color: black ;
+		color: black;
 	}
 }
